--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,5 +9,24 @@ body {
     background-color: #fff;
     box-sizing: border-box;
     height: 100%;
-    width: 100%;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 1rem;
+}
+::-webkit-scrollbar-track {
+    padding-top: 2rem;
+    background: rgb(17, 22, 92);
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(18, 28, 165);
+    border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(22, 34, 207);
+    transition: 500ms ease-in-out;
 }
