--- a/client/src/styles/dept.css
+++ b/client/src/styles/dept.css
@@ -1,166 +1,174 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .b {
-  width: 100%;
-  position: relative;
-  font-family: "Poppins", sans-serif;
-  background: linear-gradient(to right, rgb(4, 0, 31), rgba(9, 0, 113, 1));
-  margin-bottom: 0%;
+    width: 100%;
+    position: relative;
+    font-family: "Poppins", sans-serif;
+    background: linear-gradient(to right, rgb(4, 0, 31), rgba(9, 0, 113, 1));
+    margin-bottom: 0%;
 }
 
 ::selection {
-  background: #1b1b1b;
-  color: #8a7b7b;
+    background: #1b1b1b;
+    color: #8a7b7b;
 }
 
 .navbar {
-  width: 100%;
-  height: 60px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 5vw;
-  background: #0c1141;
-  z-index: 9;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5vw;
+    background: #0c1141;
+    z-index: 9;
 }
 
 .links-container {
-  display: flex;
-  list-style: none;
+    display: flex;
+    list-style: none;
 }
 
 .link {
-  padding: 10px;
-  margin-left: 10px;
-  text-decoration: none;
-  text-transform: capitalize;
-  color: #ffffff;
-  font-style: bold;
+    padding: 10px;
+    margin-left: 10px;
+    text-decoration: none;
+    text-transform: capitalize;
+    color: #ffffff;
+    font-style: bold;
 }
 .link-item1 {
-  outline: none;
-  
-  color: rgb(0, 0, 0);
-  background-color: rgba(255, 253, 27, 1);
+    outline: none;
 
-  border-radius: 25px;
+    color: rgb(0, 0, 0);
+    background-color: rgb(252, 248, 45);
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+
+    text-decoration: none;
+    border-radius: 25px;
 }
-.header {
-  margin-top: 60px;
-  width: 100%;
-  height: calc(100vh - 60px);
 
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.header {
+    margin-top: 60px;
+    width: 100%;
+    height: calc(100vh - 60px);
+
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
-  text-align: center;
+    text-align: center;
 }
 
 .heading {
-  color: #fff;
-  text-transform: capitalize;
-  font-size: 80px;
-  line-height: 60px;
-  margin-bottom: 80px;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 80px;
+    line-height: 60px;
+    margin-bottom: 80px;
 }
 
 .heading .small {
-  display: block;
-  font-size: 40px;
+    display: block;
+    font-size: 40px;
 }
 
 .heading .large {
-  display: block;
-  font-size: 80px;
+    display: block;
+    font-size: 80px;
 }
 
 .heading .no-fill {
-  /*font-style: italic;*/
-  color: transparent;
-  font-size: 40px;
-  -webkit-text-stroke: 2px rgb(255, 255, 255);
+    /*font-style: italic;*/
+    color: transparent;
+    font-size: 40px;
+    -webkit-text-stroke: 2px rgb(255, 255, 255);
 }
 
 .btn {
-  padding: 10px 20px;
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.7);
-  color: #000;
-  text-decoration: none;
-  text-transform: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.7);
+    color: #000;
+    text-decoration: none;
+    text-transform: none;
 }
 
 h2 {
-  text-align: center;
+    text-align: center;
 }
 
 .btn.dark {
-  background: #1b1b1b;
-  color: #fff;
+    background: #1b1b1b;
+    color: #fff;
 }
 .footer {
-  height: 60px;
-  margin-top: 50px;
-  margin-bottom: 10px;
-  text-align: center;
-  font-family: "Corbel";
-  font-size: 20px;
-  color: grey;
+    height: 60px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    text-align: center;
+    font-family: "Corbel";
+    font-size: 20px;
+    color: grey;
 }
 .text {
-  margin-top: 20px;
-  margin-right: 40%;
-  margin-bottom: 10%;
+    margin-top: 20px;
+    margin-right: 40%;
+    margin-bottom: 10%;
 }
 .bg {
-  size: 100%;
-  padding: 1em;
-  
-  background-position: center;
-  background-position-x: 0%;
-  background-size: cover;
+    size: 100%;
+    padding: 1em;
 
-  background-repeat: no-repeat;
-  color: rgb(226, 223, 223);
+    background-position: center;
+    background-position-x: 0%;
+    background-size: cover;
+    min-height: 100vh;
 
-  width: 100%;
-  position: relative;
-  font-family: "Poppins", sans-serif;
-  background: url("../img/Vec.svg") no-repeat, linear-gradient(to right, rgb(4, 0, 31), rgba(9, 0, 113, 1));
-  background-size: cover;
+    background-repeat: no-repeat;
+    color: rgb(226, 223, 223);
 
-  margin-bottom: 0%;
+    width: 100%;
+    position: relative;
+    font-family: "Poppins", sans-serif;
+    background: url("../img/Vec.svg") no-repeat,
+        linear-gradient(to right, rgb(4, 0, 31), rgba(9, 0, 113, 1));
+    background-size: cover;
+
+    margin-bottom: 0%;
 }
 h1 {
-  margin-top: 100px;
-  margin-right: 40%;
-  font-size: 50px;
+    margin-top: 100px;
+    margin-right: 40%;
+    font-size: 50px;
 }
 footer {
-  padding: 1em;
+    padding: 1em;
 
-  background: linear-gradient(to right, rgb(4, 0, 31), rgba(9, 0, 113, 1));
-  size: 100%;
-  padding: 1em;
+    background: linear-gradient(to right, rgb(4, 0, 31), rgba(9, 0, 113, 1));
+    size: 100%;
+    padding: 1em;
 
-  background-position: center;
+    background-position: center;
 
-  background-size: cover;
+    background-size: cover;
 
-  background-repeat: no-repeat;
-  color: rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    color: rgb(255, 255, 255);
 }
