feat(Auth Modal) Auth Modal completed

--- a/client/src/styles/dept.css
+++ b/client/src/styles/dept.css
@@ -60,6 +60,9 @@
     text-decoration: none;
     border-radius: 25px;
 }
+.link-item1:hover {
+    cursor: pointer;
+}
 
 .header {
     margin-top: 60px;
