--- a/client/src/styles/user-dashboard.css
+++ b/client/src/styles/user-dashboard.css
@@ -324,6 +324,23 @@ img.footer{
 }
 
 @media (max-width : 1000px) {
+
+    nav.navBarUser{
+        column-gap: 10%;
+    }
+
+    li.navButtons{
+        width: 45vw;
+    }
+
+    p.userName{
+        font-size: 1.5em;
+    }
+
+    img.logo{
+        height: 150%;
+    }
+
     section.subSection1{
         display: none;
     }
